# ffi-animal-farm

./: Cargo.toml  README.md  generate_csharp_bindings.sh
csharp/: .gitignore  Program.cs  csharp.csproj
csharp/uniffi/: main.cs
src/: lib.rs  main.cs  main.udl
