[package]
name = "animal_farm"
version = "0.1.0"
edition = "2021"

[lib]
name = "animal_farm"
crate-type = [ "cdylib", "staticlib" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.23.0", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.23.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"